wp-content/themes/Divi-child/assets/css/partials/propertyListingCards.scss
#et-main-area {
    .main_title {
        position: relative;
        color: $mainColor;
        font-weight: 600;
        font-size: 50px;
        text-transform: uppercase;

        &::after {
            content: "";
            position: absolute;
            bottom: 0;
            left: 0;
            width: 100%;
            border-bottom: 1px solid $mainColor;
        }
    }

    .epl-template-blog {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
    }

    .epl-listing-grid-view {
        display: flex;
        width: 33.3333%;
    }

    .epl-listing-post {
        padding: 0 10px;
        margin: 0;

        @media screen and (max-width:992px) {
            display: flex;
            width: 50%;
        }
    }

    .epl-property-blog-entry-wrapper {
        box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.15);
        margin: 15px 0;
        flex-direction: column;
        transition-duration: 0.2s;

        &:hover {
            box-shadow: 0px 2px 25px rgba(0, 0, 0, 0.30);
        }

        .property-featured-image-wrapper {
            width: 100%;
            overflow: hidden;

            img {
                min-width: 100%;
            }
        }

        .property-box-right {
            width: 100%;
        }

        .entry-title {
            font-weight: 600;
            font-size: 20px;
        }

        .property-box-right {
            padding-bottom: 0;
            padding: 20px;
        }
    }


    .epl-property-blog-entry-wrapper {
        position: relative;
    }

    .epl-archive-utility-wrapper {
        width: 100%;
    }

    .linkOverCard {
        display: block;
        opacity: 0;
        position: absolute;
        left: 0;
        height: 100%;
        width: 100%;
        z-index: 999;
    }

    @media screen and (max-width:992px) {
        .epl-listing-grid-view, .epl-listing-post {
            width: 50%;
        }
        // .epl-tool-switch{
        //     display: none;
        // }
    }

    @media screen and (max-width:576px) {
        .epl-listing-grid-view, .epl-listing-post {
            width: 100%;
            padding: 0;
        }

        .main_title {
            font-size: 30px;
        }
    }

    .epl-listing-post {
        &:not(.epl-listing-grid-view) {
            padding: 0 10px;
            margin: 0;

            .epl-property-blog-entry-wrapper {
                display: flex;
                flex-direction: row;
                align-items: center;

                @media screen and (max-width:992px) {
                    flex-direction: column;
                }
            }

            .property-featured-image-wrapper {
                width: 70%;
                @media screen and (max-width:992px) {
                    width:100%;
                }
            }
        }
    }

    .epl-property-single .status-sticker.new,
    .epl-property-blog .status-sticker.new {
        background: $mainColor
    }
}

